--- a/services/index.html
+++ b/services/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Handyman Services in Toronto | ReadyFix</title>
+  <title>Handyman Services in Toronto | Ready Fix</title>
   <meta name="description" content="Browse ReadyFix handyman services: drywall repair, carpentry, punch lists, hardware installs, and more across Toronto & the GTA.">
   <link rel="canonical" href="https://readyfix.ca/services/">
   <meta property="og:locale" content="en_CA">
@@ -32,9 +32,8 @@
       <nav class="primary-nav" aria-label="Primary">
         <button class="nav-toggle" aria-expanded="false" aria-controls="nav-menu"><span class="nav-toggle__bar"></span></button>
         <ul id="nav-menu">
-          <li><a href="/services/" aria-current="page">Services</a></li>
-          <li><a href="/services/drywall-repair-toronto/">Drywall repair</a></li>
           <li><a href="/">Home</a></li>
+          <li><a href="/services/" aria-label="Services" aria-current="page">Services</a></li>
         </ul>
       </nav>
       <a class="btn btn--ghost" data-track="cta:call" href="tel:6476994607">647-699-4607</a>
@@ -178,7 +177,7 @@
         <h3>Navigation</h3>
         <ul>
           <li><a href="/">Home</a></li>
-          <li><a href="/services/" aria-current="page">Services</a></li>
+          <li><a href="/services/" aria-label="Services" aria-current="page">Services</a></li>
           <li><a href="/services/drywall-repair-toronto/">Drywall repair</a></li>
         </ul>
       </div>
@@ -200,4 +199,5 @@
   </div>
 </body>
 </html>
+
 
