--- a/services/punch-list/index.html
+++ b/services/punch-list/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-CA">
 <head>
   <meta charset="utf-8">
@@ -8,7 +8,7 @@
   <link rel="canonical" href="https://readyfix.ca/services/punch-list/">
   <meta property="og:locale" content="en_CA">
   <meta property="og:type" content="article">
-  <meta property="og:title" content="Punch List Handyman | ReadyFix Toronto">
+  <meta property="og:title" content="Punch List Handyman | Ready Fix Toronto">
   <meta property="og:description" content="Toronto punch list repairs: caulking, mounts, trim touch-ups, inspection fixes.">
   <meta property="og:url" content="https://readyfix.ca/services/punch-list/">
   <meta property="og:image" content="https://readyfix.ca/img/og-image.jpg">
@@ -32,9 +32,8 @@
       <nav class="primary-nav" aria-label="Primary">
         <button class="nav-toggle" aria-expanded="false" aria-controls="nav-menu"><span class="nav-toggle__bar"></span></button>
         <ul id="nav-menu">
-          <li><a href="/services/">Services</a></li>
-          <li><a href="/services/drywall-repair-toronto/">Drywall repair</a></li>
           <li><a href="/">Home</a></li>
+          <li><a href="/services/" aria-label="Services">Services</a></li>
         </ul>
       </nav>
       <a class="btn btn--ghost" data-track="cta:call" href="tel:6476994607">647-699-4607</a>
@@ -46,7 +45,7 @@
       <div class="section-inner">
         <ol>
           <li><a href="/">Home</a></li>
-          <li><a href="/services/">Services</a></li>
+          <li><a href="/services/" aria-label="Services">Services</a></li>
           <li aria-current="page">Punch list help</li>
         </ol>
       </div>
@@ -79,10 +78,40 @@
           <h2>ReadyFix difference</h2>
           <p>We group small tasks into one efficient visit, protecting floors and keeping dust down. You get photos and clear notes, perfect for realtors and property managers.</p>
           <ul class="badges">
-            <li>Licensed &amp; insured</li>
+            <li>On-time arrival windows</li>
             <li>Fast scheduling</li>
-            <li>2-year workmanship warranty</li>
+            <li>Photo updates &amp; tidy cleanup</li>
           </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="service-gallery" aria-labelledby="punch-gallery">
+      <div class="section-inner">
+        <div class="section-heading">
+          <p class="eyebrow">Recent work</p>
+          <h2 id="punch-gallery">Punch list highlights</h2>
+          <p>Small fixes bundled in one visit to keep closings and move-ins on track.</p>
+        </div>
+        <div class="gallery-grid">
+          <article class="gallery-card">
+            <img src="/images/punch1.jpg" alt="Loose handrail before repair">
+            <h3>Handrail securement</h3>
+            <p>Loose rail re-anchored into studs with clean patching and paint-ready finish.</p>
+            <a class="btn btn--ghost btn--small" href="#contact">Send us your project photo</a>
+          </article>
+          <article class="gallery-card">
+            <img src="/images/punch2.jpg" alt="Messy caulking before rework">
+            <h3>Caulk + grout touch-up</h3>
+            <p>Removed failed caulk, reapplied clean beads, and refreshed grout lines in a bathroom.</p>
+            <a class="btn btn--ghost btn--small" href="#contact">Send us your project photo</a>
+          </article>
+          <article class="gallery-card">
+            <img src="/images/punch3.jpg" alt="TV mounting in progress">
+            <h3>TV + shelving install</h3>
+            <p>Anchors selected for condo walls, mounts leveled, and cables routed neatly.</p>
+            <a class="btn btn--ghost btn--small" href="#contact">Send us your project photo</a>
+          </article>
         </div>
       </div>
     </section>
@@ -169,7 +198,7 @@
         <h3>Navigation</h3>
         <ul>
           <li><a href="/">Home</a></li>
-          <li><a href="/services/">Services</a></li>
+          <li><a href="/services/" aria-label="Services">Services</a></li>
           <li><a href="/services/drywall-repair-toronto/">Drywall repair</a></li>
         </ul>
       </div>
@@ -191,3 +220,4 @@
   </div>
 </body>
 </html>
+
