--- a/drywall-repair-toronto.html
+++ b/drywall-repair-toronto.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -219,21 +219,21 @@
           <div
             style="width: 12px; height: 12px; margin-top: 3px; margin-right: 8px; border-radius: 50%; background-color: #111; transition: background-color 0.3s ease;">
           </div>
-          <p style="display: flex;  flex: 1 0 320px;">🧰 Skilled workmanship, clean seams and invisible patches</p>
+          <p style="display: flex;  flex: 1 0 320px;">ðŸ§° Skilled workmanship, clean seams and invisible patches</p>
         </div>
         <div
           style="display: flex;  flex-direction: row;  align-content: center; justify-content: center; flex: 1 1 auto; margin-bottom: 6px;">
           <div
             style="width: 12px; height: 12px; margin-top: 3px; margin-right: 8px; border-radius: 50%; background-color: #111; transition: background-color 0.3s ease;">
           </div>
-          <p style="display: flex;  flex: 1 0 320px;">⏱️ Same-day service for urgent repairs</p>
+          <p style="display: flex;  flex: 1 0 320px;">â±ï¸ Same-day service for urgent repairs</p>
         </div>
         <div
           style="display: flex;  flex-direction: row;  align-content: center; justify-content: center; flex: 1 1 auto; margin-bottom: 6px;">
           <div
             style="width: 12px; height: 12px; margin-top: 3px; margin-right: 8px; border-radius: 50%; background-color: #111; transition: background-color 0.3s ease;">
           </div>
-          <p style="display: flex;  flex: 1 0 320px;">💡 Expert advice on materials, finishes, and paint matching</p>
+          <p style="display: flex;  flex: 1 0 320px;">ðŸ’¡ Expert advice on materials, finishes, and paint matching</p>
         </div>
       </div>
 
@@ -459,7 +459,7 @@
         </ul>
       </div>
     </div>
-    <p style="color: #1a1a1a;">© 2025 ReadyFix Handyman Services. All rights reserved.</p>
+    <p style="color: #1a1a1a;">Â© 2025 ReadyFix Handyman Services. All rights reserved.</p>
   </footer>
 
 
@@ -497,3 +497,4 @@
 </body>
 
 </html>
+
