--- a/services/curtain-rod-installation/index.html
+++ b/services/curtain-rod-installation/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-CA">
 <head>
   <meta charset="utf-8">
@@ -32,7 +32,8 @@
       <nav class="primary-nav" aria-label="Primary">
         <button class="nav-toggle" aria-expanded="false" aria-controls="nav-menu"><span class="nav-toggle__bar"></span></button>
         <ul id="nav-menu">
-          <li><a href="/services/">Services</a></li>
+          <li><a href="/services/" aria-label="Services">Services</a></li>
+          <li><a href="/before-after/">Before &amp; After</a></li>
           <li><a href="/services/drywall-repair-toronto/">Drywall repair</a></li>
           <li><a href="/">Home</a></li>
         </ul>
@@ -46,7 +47,7 @@
       <div class="section-inner">
         <ol>
           <li><a href="/">Home</a></li>
-          <li><a href="/services/">Services</a></li>
+          <li><a href="/services/" aria-label="Services">Services</a></li>
           <li aria-current="page">Curtain rod installation</li>
         </ol>
       </div>
@@ -79,10 +80,40 @@
           <h2>Why ReadyFix</h2>
           <p>We work cleanly around windows, protect finishes, and ensure rods are straight and ready for panels.</p>
           <ul class="badges">
-            <li>Licensed &amp; insured</li>
+            <li>On-time arrival windows</li>
             <li>Condo-friendly</li>
-            <li>2-year workmanship warranty</li>
+            <li>Photo updates &amp; tidy cleanup</li>
           </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="service-gallery" aria-labelledby="curtains-gallery">
+      <div class="section-inner">
+        <div class="section-heading">
+          <p class="eyebrow">Recent work</p>
+          <h2 id="curtains-gallery">Curtain installs</h2>
+          <p>Level rods, solid anchors, and clean finishes for windows and doors.</p>
+        </div>
+        <div class="gallery-grid">
+          <article class="gallery-card">
+            <img src="/images/curtains1.jpg" alt="Curtain rod before installation">
+            <h3>Living room rod</h3>
+            <p>Measured and mounted a wide rod into studs, patched old holes, and leveled new brackets.</p>
+            <a class="btn btn--ghost btn--small" href="#contact">Send us your project photo</a>
+          </article>
+          <article class="gallery-card">
+            <img src="/images/curtains2.jpg" alt="Curtain brackets being installed">
+            <h3>Blackout panel setup</h3>
+            <p>Anchored blackout hardware into masonry around a condo window without cracking finishes.</p>
+            <a class="btn btn--ghost btn--small" href="#contact">Send us your project photo</a>
+          </article>
+          <article class="gallery-card">
+            <img src="/images/curtains3.jpg" alt="Entry curtain installation">
+            <h3>Entry privacy</h3>
+            <p>Installed a sleek rod over sidelights with clean caulk and tidy touch-ups.</p>
+            <a class="btn btn--ghost btn--small" href="#contact">Send us your project photo</a>
+          </article>
         </div>
       </div>
     </section>
@@ -138,7 +169,7 @@
         <div>
           <p class="eyebrow">Contact</p>
           <h2 id="contact-title">Ready to hang curtains?</h2>
-          <p>Tell us rod length, wall type, and any special brackets. We’ll confirm timing quickly.</p>
+          <p>Tell us rod length, wall type, and any special brackets. Weâ€™ll confirm timing quickly.</p>
         </div>
         <form id="contact-form" class="contact-form" action="https://formspree.io/f/xrbowkdd" method="POST" data-track="cta:form_submit">
           <input type="hidden" name="_redirect" value="/thanks.html">
@@ -169,7 +200,7 @@
         <h3>Navigation</h3>
         <ul>
           <li><a href="/">Home</a></li>
-          <li><a href="/services/">Services</a></li>
+          <li><a href="/services/" aria-label="Services">Services</a></li>
           <li><a href="/services/drywall-repair-toronto/">Drywall repair</a></li>
         </ul>
       </div>
@@ -191,3 +222,4 @@
   </div>
 </body>
 </html>
+
